tests/snapshots/run_wpt_conformance__coreml_sub_float16_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "sub.https.any.js",
    "sub float16 5D tensors",
    "coreml",
    "PASS",
)
